# practice-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
Data structures/binary_tree/: CMakeLists.txt  Makefile  binary_tree.c  binary_tree.h  test_binary_tree.c
Data structures/binary_tree/include/: binary_tree.h
Data structures/binary_tree/src/: binary_tree.c
Data structures/binary_tree/tests/: test_binary_tree.c
Data structures/hash_table/: CMakeLists.txt
Data structures/hash_table/include/: hash_table.h
Data structures/linked_list/: CMakeLists.txt  Makefile  linked_list.c  linked_list.h  test_list.c
Data structures/linked_list/include/: linked_list.h
Data structures/linked_list/src/: linked_list.c
Data structures/linked_list/tests/: test_list.c
Sorting algorithms/: CMakeLists.txt  sortscol.h
Sorting algorithms/bubble_sort/: CMakeLists.txt
Sorting algorithms/bubble_sort/include/: bubble_sort.h
Sorting algorithms/bubble_sort/src/: bubble_sort.c
Sorting algorithms/bubble_sort/tests/: test_bubble_sort.c
Sorting algorithms/comb_sort/: CMakeLists.txt
Sorting algorithms/comb_sort/include/: comb_sort.h
Sorting algorithms/comb_sort/src/: comb_sort.c
Sorting algorithms/comb_sort/tests/: test_comb_sort.c
Sorting algorithms/common/: CMakeLists.txt
Sorting algorithms/common/include/: sort_common_definitions.h
Sorting algorithms/insertion_sort/: CMakeLists.txt
Sorting algorithms/insertion_sort/include/: insertion_sort.h
Sorting algorithms/insertion_sort/src/: insertion_sort.c
Sorting algorithms/insertion_sort/tests/: test_insertion_sort.c
Sorting algorithms/merge_sort/: CMakeLists.txt
Sorting algorithms/merge_sort/include/: merge_sort.h
Sorting algorithms/merge_sort/src/: merge_sort.c
Sorting algorithms/merge_sort/tests/: test_merge_sort.c
Sorting algorithms/odd-even_sort/: CMakeLists.txt
Sorting algorithms/odd-even_sort/include/: odd-even_sort.h
Sorting algorithms/odd-even_sort/src/: odd-even_sort.c
Sorting algorithms/odd-even_sort/tests/: test_odd-even_sort.c
Sorting algorithms/oddeven_sort/: CMakeLists.txt
Sorting algorithms/oddeven_sort/include/: oddeven_sort.h
Sorting algorithms/oddeven_sort/src/: oddeven_sort.c
Sorting algorithms/oddeven_sort/tests/: test_oddeven_sort.c
Sorting algorithms/quick_sort/: CMakeLists.txt
Sorting algorithms/quick_sort/include/: quick_sort.h
Sorting algorithms/quick_sort/src/: quick_sort.c
Sorting algorithms/quick_sort/tests/: test_quick_sort.c
Sorting algorithms/selection_sort/: CMakeLists.txt
Sorting algorithms/selection_sort/include/: selection_sort.h
Sorting algorithms/selection_sort/src/: selection_sort.c
Sorting algorithms/selection_sort/tests/: test_selection_sort.c
Sorting algorithms/shaker_sort/: CMakeLists.txt
Sorting algorithms/shaker_sort/include/: shaker_sort.h
Sorting algorithms/shaker_sort/src/: shaker_sort.c
Sorting algorithms/shaker_sort/tests/: test_shaker_sort.c
Sorting algorithms/shell_sort/: CMakeLists.txt
Sorting algorithms/shell_sort/include/: shell_sort.h
Sorting algorithms/shell_sort/src/: shell_sort.c
Sorting algorithms/shell_sort/tests/: test_shell_sort.c
Sorting algorithms/sorts_collection/: CMakeLists.txt
