add_library(ya_selection_sort src/selection_sort.c)
target_include_directories(ya_selection_sort PUBLIC include)
target_link_libraries(ya_selection_sort common_sort_def)
target_compile_options(ya_selection_sort PRIVATE -Wno-unused-function)

add_executable(ya_selection_sort_test tests/test_selection_sort.c)
target_link_libraries(ya_selection_sort_test ya_selection_sort)
target_compile_options(ya_selection_sort_test PRIVATE -Wno-unused-function)

add_test(test_selection_sort ya_selection_sort_test)