add_library(selection_sort src/selection_sort.c)
target_include_directories(selection_sort PUBLIC include)
target_link_libraries(selection_sort common_sort_def)
target_compile_options(selection_sort PRIVATE -Wno-unused-function)

add_executable(selection_sort_test tests/test_selection_sort.c)
target_link_libraries(selection_sort_test selection_sort)
target_compile_options(selection_sort_test PRIVATE -Wno-unused-function)

add_test(test_selection_sort selection_sort_test)