add_library(ya_shaker_sort src/shaker_sort.c)
target_include_directories(ya_shaker_sort PUBLIC include)
target_link_libraries(ya_shaker_sort common_sort_def)
target_compile_options(ya_shaker_sort PRIVATE -Wno-unused-function)

add_executable(ya_shaker_sort_test tests/test_shaker_sort.c)
target_link_libraries(ya_shaker_sort_test ya_shaker_sort)
target_compile_options(ya_shaker_sort_test PRIVATE -Wno-unused-function)

add_test(test_shaker_sort ya_shaker_sort_test)